--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ leftbar .search {
     padding: 10px 10px;
     margin-bottom: 10px;
     border-radius: 15px;
-    width: 300px; 
+    width: 250px; 
     cursor: pointer;
 
 }
@@ -64,11 +64,22 @@ leftbar  .search:hover {
     flex-direction: column;
     padding: 10px 10px;
     border-radius: 15px;
-    width: 300px; 
+    width: 250px; 
     color: rgb(14, 209, 79);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border: solid white 2px;
 }
+
+leftbar .navbarhamburger{
+    padding-right: 0;
+    display: none;
+}
+
+.navbarHamburgerClose{
+    padding-right: 0;
+    display: none;
+}
+
 
  leftbar .searchUlists {
     display: flex;
@@ -254,7 +265,9 @@ content .shoppingDiv{
     padding: 5px 15px;
 }
 
+.postContainer {
 
+}
 
 
 
@@ -272,14 +285,95 @@ content .shoppingDiv{
         background-color: blue;
         grid-area: rightbar;
         display: none;
+       
     }
     
     leftbar{
-        background-color: aqua;
-        grid-area: leftbar;
-        display: none;
-      
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        width: 100%;
+        background-color:white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        /* grid-area: leftbar; */
+        
     }
+
+    leftbar .search{
+      width: 250px;   
+      margin: 5px auto;
+      /* background-color: aqua; */
+    }
+
+    leftbar > h2{
+        font-size:large;
+        font-weight: 700;
+        justify-content: center;
+        align-items:center;
+    }
+
+    leftbar .navbarhamburger{
+        margin: auto;
+        display: flex;
+        transition: 0.4 ease;
+        cursor: pointer;
+    }
+    .navbarhamburger:hover{
+        margin: auto;
+        display: flex;
+        background-color: black;
+        color: white;
+        border: 1px solid black;
+    }
+
+    .navbarHamburgerClose{
+        display: none;
+        margin: auto;
+    }
+
+ 
+    
+    leftbar .searchUlists{
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 70px;
+        right: 0;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        padding: 30px;
+        border-radius: 20px;
+        display: none;
+    
+        }
+        .searchUlists::after{
+            /* display: flex; */
+            flex-direction: column;
+            margin: 0;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 70px;
+            right: 0;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            padding: 30px;
+            border-radius: 20px;
+            display: none;
+            background-color: red;
+            }
+
+    leftbar > p{
+        display: none;
+    }
+
+
+
+
+
     content{
         grid-area: content;
     }
@@ -329,6 +423,8 @@ content .shoppingDiv{
 
  }
 
+ 
+
  @media (max-width: 499px) and (min-width: 320px){
     .container{
         grid-template-columns: 1fr;
@@ -337,8 +433,86 @@ content .shoppingDiv{
                            
     }
 
+    rightbar{
+        background-color: blue;
+        grid-area: rightbar;
+        display: none;
+    }
+
+       
+    leftbar{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 100%;
+        background-color:rgb(231, 62, 62);
+        padding-top: 10px;
+        padding-bottom: 10px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        /* grid-area: leftbar; */
+        
+    }
+    
+    leftbar{
+        background-color: aqua;
+        grid-area: leftbar;
+        display: none;
+      
+    }
+
+    leftbar .navbarhamburger{
+        margin: auto;
+        display: flex;
+        cursor: pointer;
+    }
+    .navbarhamburger:hover{
+        margin: auto;
+        display: flex;
+        background-color: black;
+        color: white;
+        border: 1px solid black;    }
+
+        .navbarHamburgerClose{
+            margin: auto;
+            display: none;
+        }
+
+    leftbar .search{
+        width: 250px;   
+        /* margin-right:20px; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      leftbar > h2{
+        font-size:small;
+        font-weight: 100;
+        justify-content: center;
+        align-items:center;
+    }
+  
+
+    leftbar .searchUlists{
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 70px;
+        right: 0;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        /* padding: 30px; */
+        border-radius: 20px;
+
+        display: none;
+    }
     content{
         grid-area: content;
+        background-color: red;
    
     }
 
